--- a/streamlit.ipynb
+++ b/streamlit.ipynb
@@ -1,94 +1,55 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b909a063",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing store_1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile store_1.py\n",
-    "\n",
-    "import streamlit as st\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing import image\n",
-    "import numpy as np\n",
-    "from PIL import Image\n",
-    "\n",
-    "# -------------------- PAGE CONFIG --------------------\n",
-    "st.set_page_config(page_title=\"🍔 Fast Food Classifier\", layout=\"centered\")\n",
-    "\n",
-    "st.title(\"🍕 Fast Food Image Classifier\")\n",
-    "st.write(\"Upload a food image and the model will predict its class!\")\n",
-    "\n",
-    "# -------------------- LOAD MODEL --------------------\n",
-    "@st.cache_resource\n",
-    "def load_model():\n",
-    "    model = tf.keras.models.load_model(\"FineTuned-DenseNet.h5\")\n",
-    "    return model\n",
-    "\n",
-    "model = load_model()\n",
-    "\n",
-    "# -------------------- CLASS LABELS --------------------\n",
-    "# ⚠️ Replace these with your actual class names from the training directory\n",
-    "class_names = [\n",
-    "    \"Burger\", \"Pizza\", \"Hotdog\", \"Fries\", \"Sandwich\",\n",
-    "    \"Taco\", \"Nuggets\", \"Donut\", \"Pasta\", \"Salad\"\n",
-    "]\n",
-    "\n",
-    "# -------------------- UPLOAD IMAGE --------------------\n",
-    "uploaded_file = st.file_uploader(\"Choose an image...\", type=[\"jpg\", \"jpeg\", \"png\"])\n",
-    "\n",
-    "if uploaded_file is not None:\n",
-    "    # Open and display image\n",
-    "    img = Image.open(uploaded_file).convert(\"RGB\")\n",
-    "    st.image(img, caption=\"Uploaded Image\", use_container_width=True)\n",
-    "    st.write(\"\")\n",
-    "\n",
-    "    # Preprocess image\n",
-    "    img = img.resize((150, 150))\n",
-    "    img_array = image.img_to_array(img)\n",
-    "    img_array = np.expand_dims(img_array, axis=0)\n",
-    "    img_array = img_array / 255.0  # same rescaling as training\n",
-    "\n",
-    "    # Predict\n",
-    "    predictions = model.predict(img_array)\n",
-    "    predicted_class = class_names[np.argmax(predictions)]\n",
-    "    confidence = np.max(predictions)\n",
-    "\n",
-    "    # Display result\n",
-    "    st.markdown(f\"### 🍟 Prediction: **{predicted_class}**\")\n",
-    "    st.markdown(f\"**Confidence:** {confidence * 100:.2f}%\")\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+%%writefile store_1.py
+import streamlit as st
+import tensorflow as tf
+from tensorflow.keras.preprocessing import image
+import numpy as np
+from PIL import Image
+
+# -------------------- PAGE CONFIG --------------------
+st.set_page_config(page_title="🍔 Fast Food Classifier", layout="centered")
+st.title("🍕 Fast Food Image Classifier")
+st.write("Upload a food image and the model will predict its class!")
+
+# -------------------- LOAD MODEL --------------------
+@st.cache_resource
+def load_model():
+    model = tf.keras.models.load_model("FineTuned-DenseNet.h5")
+    return model
+
+model = load_model()
+
+# Show model input shape
+st.write("✅ Model input shape:", model.input_shape)
+
+# -------------------- CLASS LABELS --------------------
+class_names = [
+    "Burger", "Pizza", "Hotdog", "Fries", "Sandwich",
+    "Taco", "Nuggets", "Donut", "Pasta", "Salad"
+]
+
+# -------------------- UPLOAD IMAGE --------------------
+uploaded_file = st.file_uploader("Choose an image...", type=["jpg", "jpeg", "png"])
+
+if uploaded_file is not None:
+    # Open and display image
+    img = Image.open(uploaded_file).convert("RGB")
+    st.image(img, caption="Uploaded Image", use_container_width=True)
+    st.write("")
+
+    # Resize to match model input size
+    target_size = model.input_shape[1:3]  # e.g. (224, 224)
+    img = img.resize(target_size)
+
+    # Preprocess
+    img_array = image.img_to_array(img)
+    img_array = np.expand_dims(img_array, axis=0)
+    img_array = img_array / 255.0
+
+    # Predict
+    predictions = model.predict(img_array)
+    predicted_class = class_names[np.argmax(predictions)]
+    confidence = np.max(predictions)
+
+    # Display result
+    st.markdown(f"### 🍟 Prediction: **{predicted_class}**")
+    st.markdown(f"**Confidence:** {confidence * 100:.2f}%")
